--- a/excel_comp/core/templates/core/dashboard.html
+++ b/excel_comp/core/templates/core/dashboard.html
@@ -14,10 +14,9 @@
 {% block content %} 
 <main class="page-container">
     <div id="head">
-        <div id="image1"> <img src="{% static 'images/Excel_Comp.png' %}"  alt=""></div>
+        <div id="image1"> <img src="{% static 'authentication/images/Excel_Comp.png' %}"  alt=""></div>
         <div id="ease">Duplicate with ease</div>
-        <div id="image2">  <img src="{% static 'images/vector1.png' %}"  alt=""></div>
-       
+        <div id="image2">  <img src="{% static 'authentication/images/vector1.png' %}"  alt=""></div>
     </div>
     
     <div style="margin: auto; width: 40%;padding: 20px 0;">
@@ -34,7 +33,7 @@
             
             <div id="body" >
                 <input type="file" name="excel_file" id="upload">
-                <label for="upload"><img src="{% static 'images/vector22.png' %}" alt=""></label>
+                <label for="upload"><img src="{% static 'authentication/images/vector22.png' %}" alt=""></label>
             </div>
             
         </section>
