--- a/excel_comp/staticfiles/authentication/css/style.css
+++ b/excel_comp/staticfiles/authentication/css/style.css
@@ -94,9 +94,7 @@ form input {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  top: 25%;
-  left: 30%;
+  justify-content: center;
 }
 .legend {
   color: var(--darkBlue);
@@ -426,9 +424,10 @@ footer {
     display: flex;
     flex-direction: column;
 }
-.right span {
+.right a {
     padding-top: 20px;
     font-weight: 500;
+    text-decoration: none;
 }
 
 .right h3 {
